syntax = "proto3";

option csharp_namespace = "Grpc.HttpApi.UnitTests";

package greet;

import "google/protobuf/wrappers.proto";

import public "annotations.proto";



// The greeting service definition.
service HttpApiGreeterService {

  //SayHello Action
  rpc SayHello (HelloRequest) returns (HelloReply){	
	option (grpc.extensions.http_api_option) = {
			path : "/api/greeter/{name}",
			method : "get",
			description : "greeter hello"
			
	};
  };
   //PostTest Action
  rpc PostTest (HelloRequest) returns (HelloReply){	
    option (grpc.extensions.http_api_option) = {
		    path : "/api/greeter",
		    method : "post",
		    description : "post greeter hello"			
    };
  };
  //PostTest Action
  rpc NoOption (HelloRequest) returns (HelloReply);
}

service HttpApiInvalidPatternGreeterService{
    rpc BadPattern (HelloRequest) returns (HelloReply){	
        option (grpc.extensions.http_api_option) = {
		        path : "api/greeter/{name}",
		        method : "get",
		        description : "greeter hello"
			
        };
    };
}


// The request message containing the user's name.
message HelloRequest {
    enum NestedEnum {
      NESTED_ENUM_UNSPECIFIED = 0;
      FOO = 1;
      BAR = 2;
      BAZ = 3;
      NEG = -1;  // Intentionally negative.
    }

    int32 single_int32 = 1; //single_int32 comment
    int64 single_int64 = 2;
    uint32 single_uint32 = 3;
    uint64 single_uint64 = 4;
    sint32 single_sint32 = 5;
    sint64 single_sint64 = 6;
    fixed32 single_fixed32 = 7;
    fixed64 single_fixed64 = 8;
    sfixed32 single_sfixed32 = 9;
    sfixed64 single_sfixed64 = 10;
    float single_float = 11;
    double single_double = 12;
    bool single_bool = 13;
    string single_string = 14;
    bytes single_bytes = 15;
    NestedEnum single_enum = 16;

    string name =20;//name comment

    SubMessage sub_message= 21;
    
}

message SubMessage {
    string sub_field = 1;
    repeated string sub_fields = 2;
}
// The response message containing the greetings.
message HelloReply {
  string message = 1; //message comment
  repeated string list_message = 2; //list message comment
  google.protobuf.StringValue nullable_message = 3;  //nullable message comment
}
